@@ -29,15 +29,17 @@ import static net.solarnetwork.central.test.CommonTestUtils.randomLong;
 import static net.solarnetwork.central.test.CommonTestUtils.randomString;
 import static org.assertj.core.api.BDDAssertions.and;
 import static org.assertj.core.api.BDDAssertions.from;
+import static org.assertj.core.api.InstanceOfAssertFactories.map;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
+import static org.springframework.security.crypto.encrypt.Encryptors.noOpText;
 import java.net.URI;
-import java.util.Collections;
-import java.util.List;
+import java.time.Clock;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -46,9 +48,9 @@ import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.support.ResourceBundleMessageSource;
-import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.RequestEntity;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.encrypt.TextEncryptor;
 import org.springframework.web.client.RestOperations;
@@ -64,7 +66,7 @@ import net.solarnetwork.domain.Result.ErrorDetail;
  * Test cases for the {@link FroniusCloudIntegrationService} class.
  *
  * @author matt
- * @version 1.0
+ * @version 1.1
  */
 @SuppressWarnings("static-access")
 @ExtendWith(MockitoExtension.class)
@@ -81,18 +83,17 @@ public class FroniusCloudIntegrationServiceTests {
 	@Mock
 	private RestOperations restOps;
 
-	@Mock
-	private TextEncryptor encryptor;
+	private TextEncryptor encryptor = noOpText();
 
 	@Captor
-	private ArgumentCaptor<HttpEntity<?>> httpEntityCaptor;
+	private ArgumentCaptor<RequestEntity<String>> httpRequestCaptor;
 
 	private FroniusCloudIntegrationService service;
 
 	@BeforeEach
 	public void setup() {
-		service = new FroniusCloudIntegrationService(Collections.singleton(datumStreamService),
-				userEventAppenderBiz, encryptor, restOps);
+		service = new FroniusCloudIntegrationService(Set.of(datumStreamService), userEventAppenderBiz,
+				encryptor, restOps, Clock.systemUTC());
 
 		ResourceBundleMessageSource msg = new ResourceBundleMessageSource();
 		msg.setBasenames(FroniusCloudIntegrationService.class.getName(),
@@ -104,7 +105,7 @@ public class FroniusCloudIntegrationServiceTests {
 	public void validate_missingAuthSettings() {
 		// GIVEN
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				"foo", "bar"
@@ -154,7 +155,7 @@ public class FroniusCloudIntegrationServiceTests {
 		final String apiSecret = randomString();
 
 		final CloudIntegrationConfiguration conf = new CloudIntegrationConfiguration(TEST_USER_ID,
-				randomLong(), now());
+				randomLong(), now(), randomString(), randomString());
 		// @formatter:off
 		conf.setServiceProps(Map.of(
 				FroniusCloudIntegrationService.ACCESS_KEY_ID_SETTING, apiKey,
@@ -162,11 +163,8 @@ public class FroniusCloudIntegrationServiceTests {
 		));
 		// @formatter:on
 
-		final URI listSystemsUri = FroniusCloudIntegrationService.BASE_URI
-				.resolve(FroniusCloudIntegrationService.LIST_SYSTEMS_URL);
 		final ResponseEntity<String> res = new ResponseEntity<String>(randomString(), HttpStatus.OK);
-		given(restOps.exchange(eq(listSystemsUri), eq(HttpMethod.GET), any(), eq(String.class)))
-				.willReturn(res);
+		given(restOps.exchange(any(), eq(String.class))).willReturn(res);
 
 		// WHEN
 
@@ -174,12 +172,21 @@ public class FroniusCloudIntegrationServiceTests {
 
 		// THEN
 		// @formatter:off
-		then(restOps).should().exchange(any(), eq(HttpMethod.GET), httpEntityCaptor.capture(), eq(String.class));
-		and.then(httpEntityCaptor.getValue().getHeaders())
+		then(restOps).should().exchange(httpRequestCaptor.capture(), eq(String.class));
+
+		final URI listSystemsUri = FroniusCloudIntegrationService.BASE_URI
+				.resolve(FroniusCloudIntegrationService.LIST_SYSTEMS_URL);
+
+		and.then(httpRequestCaptor.getValue())
+			.as("HTTP method is GET")
+			.returns(HttpMethod.GET, from(RequestEntity::getMethod))
+			.as("Request URI for inverter telemetry")
+			.returns(listSystemsUri, from(RequestEntity::getUrl))
+			.extracting(r -> r.getHeaders().toSingleValueMap(), map(String.class, String.class))
 			.as("Request headers contains API key")
-			.containsEntry(FroniusCloudIntegrationService.ACCESS_KEY_ID_HEADER, List.of(apiKey))
+			.containsEntry(FroniusCloudIntegrationService.ACCESS_KEY_ID_HEADER, apiKey)
 			.as("Request headers contains API secret")
-			.containsEntry(FroniusCloudIntegrationService.ACCES_KEY_SECRET_HEADER, List.of(apiSecret))
+			.containsEntry(FroniusCloudIntegrationService.ACCES_KEY_SECRET_HEADER, apiSecret)
 			;
 
 		and.then(result)
