@@ -22,19 +22,20 @@
 
 package net.solarnetwork.central.web.support;
 
+import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Serial;
-import java.util.Collections;
 import java.util.Map;
-import org.springframework.util.MultiValueMap;
+import org.jspecify.annotations.Nullable;
+import org.springframework.http.HttpHeaders;
 
 /**
  * Simple cached content item.
  *
  * @author matt
- * @version 1.0
+ * @version 2.0
  * @since 1.16
  */
 public class SimpleCachedContent implements CachedContent {
@@ -42,10 +43,10 @@ public class SimpleCachedContent implements CachedContent {
 	@Serial
 	private static final long serialVersionUID = 7168846971070309662L;
 
-	private final MultiValueMap<String, String> headers;
-	private final Map<String, ?> metadata;
+	private final HttpHeaders headers;
+	private final @Nullable Map<String, ?> metadata;
 	private final byte[] data;
-	private final String contentEncoding;
+	private final @Nullable String contentEncoding;
 
 	/**
 	 * Constructor.
@@ -55,7 +56,7 @@ public class SimpleCachedContent implements CachedContent {
 	 * @param data
 	 *        the data
 	 */
-	public SimpleCachedContent(MultiValueMap<String, String> headers, byte[] data) {
+	public SimpleCachedContent(HttpHeaders headers, byte[] data) {
 		this(headers, data, null, null);
 	}
 
@@ -67,10 +68,9 @@ public class SimpleCachedContent implements CachedContent {
 	 * @param data
 	 *        the data
 	 * @param contentEncoding
-	 *        the content encoding, or {@literal null}
+	 *        the content encoding, or {@code null}
 	 */
-	public SimpleCachedContent(MultiValueMap<String, String> headers, byte[] data,
-			String contentEncoding) {
+	public SimpleCachedContent(HttpHeaders headers, byte[] data, String contentEncoding) {
 		this(headers, data, contentEncoding, null);
 	}
 
@@ -82,36 +82,36 @@ public class SimpleCachedContent implements CachedContent {
 	 * @param data
 	 *        the data
 	 * @param contentEncoding
-	 *        the content encoding, or {@literal null}
+	 *        the content encoding, or {@code null}
 	 * @param metadata
-	 *        the metadata, or {@literal null}; must be fully serializable
+	 *        the metadata, or {@code null}; must be fully serializable
 	 */
-	public SimpleCachedContent(MultiValueMap<String, String> headers, byte[] data,
-			String contentEncoding, Map<String, ?> metadata) {
+	public SimpleCachedContent(HttpHeaders headers, byte[] data, @Nullable String contentEncoding,
+			@Nullable Map<String, ?> metadata) {
 		super();
-		this.headers = headers;
-		this.data = data;
+		this.headers = requireNonNullArgument(headers, "headers");
+		this.data = requireNonNullArgument(data, "data");
 		this.contentEncoding = contentEncoding;
 		this.metadata = metadata;
 	}
 
 	@Override
-	public MultiValueMap<String, String> getHeaders() {
+	public HttpHeaders getHeaders() {
 		return headers;
 	}
 
 	@Override
 	public Map<String, ?> getMetadata() {
-		return (metadata != null ? metadata : Collections.emptyMap());
+		return (metadata != null ? metadata : Map.of());
 	}
 
 	@Override
-	public String getContentEncoding() {
+	public @Nullable String getContentEncoding() {
 		return contentEncoding;
 	}
 
 	@Override
-	public InputStream getContent() throws IOException {
+	public @Nullable InputStream getContent() throws IOException {
 		return (data != null ? new ByteArrayInputStream(data) : null);
 	}
 
