@@ -24,42 +24,40 @@ package net.solarnetwork.central.security.jdbc.test;
 
 import static org.assertj.core.api.BDDAssertions.from;
 import static org.assertj.core.api.BDDAssertions.then;
+import static org.assertj.core.api.BDDAssertions.thenExceptionOfType;
 import static org.assertj.core.api.InstanceOfAssertFactories.type;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonSerializer;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import net.solarnetwork.central.security.BasicSecurityPolicy;
-import net.solarnetwork.central.security.SecurityPolicy;
-import net.solarnetwork.central.security.SecurityPolicySerializer;
 import net.solarnetwork.central.security.SecurityToken;
 import net.solarnetwork.central.security.SecurityTokenType;
 import net.solarnetwork.central.security.jdbc.JdbcUserDetailsService;
-import net.solarnetwork.central.test.AbstractJdbcDaoTestSupport;
-import net.solarnetwork.codec.ObjectMapperFactoryBean;
+import net.solarnetwork.central.test.AbstractJUnit5JdbcDaoTestSupport;
+import net.solarnetwork.central.test.CommonDbTestUtils;
+import net.solarnetwork.codec.jackson.BasicSecurityPolicyDeserializer;
+import net.solarnetwork.codec.jackson.SecurityPolicySerializer;
+import net.solarnetwork.domain.BasicSecurityPolicy;
+import net.solarnetwork.domain.SecurityPolicy;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.json.JsonMapper;
+import tools.jackson.databind.module.SimpleModule;
 
 /**
  * Test cases for the {@link JdbcUserDetailsService} class.
  * 
  * @author matt
- * @version 2.0
+ * @version 2.1
  */
-public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
+public class JdbcUserDetailsServiceTests extends AbstractJUnit5JdbcDaoTestSupport {
 
 	private static final String TEST_PASSWORD = "password";
 	private static final String TEST_ROLE = "ROLE_USER";
@@ -70,13 +68,12 @@ public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
 	private JdbcUserDetailsService service;
 	private ObjectMapper objectMapper;
 
-	@Before
+	@BeforeEach
 	public void setup() throws Exception {
-		ObjectMapperFactoryBean factory = new ObjectMapperFactoryBean();
-		List<JsonSerializer<?>> list = new ArrayList<JsonSerializer<?>>(1);
-		list.add(new SecurityPolicySerializer());
-		factory.setSerializers(list);
-		objectMapper = factory.getObject();
+		SimpleModule mod = new SimpleModule("Test");
+		mod.addSerializer(new SecurityPolicySerializer());
+		mod.addDeserializer(SecurityPolicy.class, new BasicSecurityPolicyDeserializer());
+		objectMapper = JsonMapper.builder().addModule(mod).build();
 
 		passwordEncoder = new BCryptPasswordEncoder(12, new java.security.SecureRandom());
 
@@ -84,9 +81,10 @@ public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
 		service.setDataSource(jdbcTemplate.getDataSource());
 	}
 
-	@Test(expected = UsernameNotFoundException.class)
+	@Test
 	public void noMatchingUser() {
-		service.loadUserByUsername("foobar");
+		thenExceptionOfType(UsernameNotFoundException.class)
+				.isThrownBy(() -> service.loadUserByUsername("foobar"));
 	}
 
 	@Override
@@ -102,25 +100,19 @@ public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
 		final Long userId = 123L;
 		final String username = setupTestUser(userId);
 		UserDetails details = service.loadUserByUsername(username);
-		Assert.assertNotNull(details);
-		Assert.assertEquals("Username", username, details.getUsername());
 
 		Set<GrantedAuthority> auths = new HashSet<GrantedAuthority>();
 		auths.add(new SimpleGrantedAuthority(TEST_ROLE));
 
-		Assert.assertEquals("Roles", auths, details.getAuthorities());
+		then(details).isNotNull().returns(username, from(UserDetails::getUsername)).returns(auths,
+				from(UserDetails::getAuthorities));
 	}
 
 	private String setupTestToken(Long userId, BasicSecurityPolicy policy) {
 		service.setUsersByUsernameQuery(JdbcUserDetailsService.DEFAULT_TOKEN_USERS_BY_USERNAME_SQL);
 		service.setAuthoritiesByUsernameQuery(
 				JdbcUserDetailsService.DEFAULT_TOKEN_AUTHORITIES_BY_USERNAME_SQL);
-		String json;
-		try {
-			json = objectMapper.writeValueAsString(policy);
-		} catch ( JsonProcessingException e ) {
-			throw new RuntimeException(e);
-		}
+		String json = objectMapper.writeValueAsString(policy);
 		jdbcTemplate.update(
 				"INSERT INTO solaruser.user_auth_token (auth_token,user_id,auth_secret,status,token_type,jpolicy) VALUES (?,?,?,?::solaruser.user_auth_token_status,?::solaruser.user_auth_token_type,?::json)",
 				TEST_TOKEN, userId, TEST_TOKEN_PASSWORD, "Active", "User", json);
@@ -132,20 +124,38 @@ public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
 		final Long userId = 123L;
 		setupTestUser(userId);
 		final BasicSecurityPolicy policy = new BasicSecurityPolicy.Builder()
-				.withSourceIds(Collections.singleton("Main")).build();
+				.withSourceIds(Set.of("Main")).build();
 		final String token = setupTestToken(userId, policy);
 
 		UserDetails details = service.loadUserByUsername(token);
-		Assert.assertNotNull(details);
-		Assert.assertEquals("Username", token, details.getUsername());
-		Assert.assertTrue("Is AuthenticatedToken", details instanceof SecurityToken);
-		SecurityToken authToken = (SecurityToken) details;
-		Assert.assertEquals("Token", token, authToken.getToken());
-		Assert.assertEquals("Token type", SecurityTokenType.User, authToken.getTokenType());
-		Assert.assertEquals("Token user ID", userId, authToken.getUserId());
-		Assert.assertNotNull("Token policy", authToken.getPolicy());
-		Assert.assertEquals("Token source IDs", policy.getSourceIds(),
-				authToken.getPolicy().getSourceIds());
+		// @formatter:off
+		then(details).isNotNull()
+			.returns(token, from(UserDetails::getUsername))
+			.isInstanceOfSatisfying(SecurityToken.class,t -> {
+				then(t)
+					.returns(token, from(SecurityToken::getToken))
+					.returns(SecurityTokenType.User, from(SecurityToken::getTokenType))
+					.returns(userId, from(SecurityToken::getUserId))
+					.extracting(SecurityToken::getPolicy)
+					.returns(policy.getSourceIds(), from(SecurityPolicy::getSourceIds))
+					;
+			});
+		// @formatter:on
+	}
+
+	@Test
+	public void matchingToken_disabledUser() {
+		// GIVEN
+		final Long userId = 123L;
+		setupTestUser(userId);
+		final BasicSecurityPolicy policy = new BasicSecurityPolicy.Builder()
+				.withSourceIds(Set.of("Main")).build();
+		final String token = setupTestToken(userId, policy);
+		CommonDbTestUtils.setUserEnabled(jdbcTemplate, userId, false);
+
+		// THEN
+		thenExceptionOfType(UsernameNotFoundException.class)
+				.isThrownBy(() -> service.loadUserByUsername(token));
 	}
 
 	@Test
@@ -154,7 +164,7 @@ public class JdbcUserDetailsServiceTests extends AbstractJdbcDaoTestSupport {
 		final Long userId = 123L;
 		setupTestUser(userId);
 		final BasicSecurityPolicy policy = new BasicSecurityPolicy.Builder()
-				.withSourceIds(Collections.singleton("Main"))
+				.withSourceIds(Set.of("Main"))
 				.withNotAfter(Instant.now().plus(1, ChronoUnit.DAYS).truncatedTo(ChronoUnit.MILLIS))
 				.build();
 		final String token = setupTestToken(userId, policy);
