@@ -23,23 +23,25 @@
 package net.solarnetwork.central.datum.support;
 
 import static java.util.Collections.emptyMap;
+import static net.solarnetwork.util.ObjectUtils.nonnull;
+import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.PathMatcher;
 import net.solarnetwork.central.datum.biz.DatumStreamsAccessor;
 import net.solarnetwork.domain.datum.Datum;
 import net.solarnetwork.domain.datum.ObjectDatumKind;
-import net.solarnetwork.util.ObjectUtils;
+import net.solarnetwork.domain.datum.ObjectDatumStreamMetadata;
 
 /**
  * Basic implementation of {@link DatumStreamsAccessor}.
@@ -49,14 +51,14 @@ import net.solarnetwork.util.ObjectUtils;
  * </p>
  *
  * @author matt
- * @version 2.0
+ * @version 2.2
  */
 public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 
 	private final PathMatcher pathMatcher;
 	private final Collection<? extends Datum> datum;
 
-	private Map<ObjectDatumKind, Map<Long, Map<String, List<Datum>>>> timeSortedDatumBySource;
+	private @Nullable Map<ObjectDatumKind, Map<Long, Map<String, List<Datum>>>> timeSortedDatumBySource;
 
 	/**
 	 * Constructor.
@@ -68,10 +70,11 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 	 * @throws IllegalArgumentException
 	 *         if {@code PathMatcher} is {@code null}
 	 */
-	public BasicDatumStreamsAccessor(PathMatcher pathMatcher, Collection<? extends Datum> datum) {
+	public BasicDatumStreamsAccessor(PathMatcher pathMatcher,
+			@Nullable Collection<? extends Datum> datum) {
 		super();
-		this.pathMatcher = ObjectUtils.requireNonNullArgument(pathMatcher, "pathMatcher");
-		this.datum = (datum != null ? datum : Collections.emptyList());
+		this.pathMatcher = requireNonNullArgument(pathMatcher, "pathMatcher");
+		this.datum = (datum != null ? datum : List.of());
 	}
 
 	/**
@@ -85,10 +88,11 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 			// create tmp map with SortedSet to identify and warn about duplicate datum
 			Map<ObjectDatumKind, Map<Long, Map<String, SortedSet<Datum>>>> map = new HashMap<>(2);
 			for ( Datum d : datum ) {
-				SortedSet<Datum> set = map.computeIfAbsent(d.getKind(), k -> new HashMap<>(2))
-						.computeIfAbsent(d.getObjectId(), k -> new HashMap<>(8))
-						.computeIfAbsent(d.getSourceId(), k -> new TreeSet<>(
-								(l, r) -> r.getTimestamp().compareTo(l.getTimestamp())));
+				SortedSet<Datum> set = map.computeIfAbsent(d.getKind(), _ -> new HashMap<>(2))
+						.computeIfAbsent(d.getObjectId(), _ -> new HashMap<>(8))
+						.computeIfAbsent(d.getSourceId(),
+								_ -> new TreeSet<>((l, r) -> nonnull(r.getTimestamp(), "Right timestamp")
+										.compareTo(l.getTimestamp())));
 
 				if ( !set.contains(d) ) {
 					set.add(d);
@@ -105,10 +109,10 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 				for ( Map<String, SortedSet<Datum>> sourceMap : nodeMap.values() ) {
 					for ( SortedSet<Datum> set : sourceMap.values() ) {
 						for ( Datum d : set ) {
-							result.computeIfAbsent(d.getKind(), k -> new HashMap<>(nodeMap.size()))
+							result.computeIfAbsent(d.getKind(), _ -> new HashMap<>(nodeMap.size()))
 									.computeIfAbsent(d.getObjectId(),
-											k -> new HashMap<>(sourceMap.size()))
-									.computeIfAbsent(d.getSourceId(), k -> new ArrayList<>(set.size()))
+											_ -> new HashMap<>(sourceMap.size()))
+									.computeIfAbsent(d.getSourceId(), _ -> new ArrayList<>(set.size()))
 									.add(d);
 						}
 					}
@@ -124,12 +128,38 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 			return emptyMap();
 		}
 		final var maps = sortedDatumStreams();
-		return maps.getOrDefault(kind, new HashMap<>(2)).getOrDefault(objectId, new HashMap<>());
+		return maps.computeIfAbsent(kind, _ -> new HashMap<>(2)).computeIfAbsent(objectId,
+				_ -> new HashMap<>(4));
 	}
 
 	@Override
-	public Collection<Datum> offsetMatching(ObjectDatumKind kind, Long objectId, String sourceIdPattern,
-			int offset) {
+	public @Nullable Datum at(ObjectDatumKind kind, Long objectId, String sourceId, Instant timestamp) {
+		final var map = sortedDatumStreams(kind, objectId);
+		final List<Datum> list = map.computeIfAbsent(sourceId, _ -> new ArrayList<>(2));
+		return at(kind, objectId, sourceId, list, timestamp);
+	}
+
+	@Override
+	public Collection<Datum> atMatching(ObjectDatumKind kind, Long objectId,
+			@Nullable String sourceIdPattern, Instant timestamp) {
+		final var map = sortedDatumStreams(kind, objectId);
+		final var result = new ArrayList<Datum>(map.size());
+		for ( Entry<String, List<Datum>> e : map.entrySet() ) {
+			if ( sourceIdPattern == null || sourceIdPattern.isEmpty()
+					|| pathMatcher.match(sourceIdPattern, e.getKey()) ) {
+				List<Datum> list = e.getValue();
+				Datum d = at(kind, objectId, e.getKey(), list, timestamp);
+				if ( d != null ) {
+					result.add(d);
+				}
+			}
+		}
+		return result;
+	}
+
+	@Override
+	public Collection<Datum> offsetMatching(ObjectDatumKind kind, Long objectId,
+			@Nullable String sourceIdPattern, int offset) {
 		final var map = sortedDatumStreams(kind, objectId);
 		final var result = new ArrayList<Datum>(map.size());
 		for ( Entry<String, List<Datum>> e : map.entrySet() ) {
@@ -146,15 +176,15 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 	}
 
 	@Override
-	public Datum offset(ObjectDatumKind kind, Long objectId, String sourceId, int offset) {
+	public @Nullable Datum offset(ObjectDatumKind kind, Long objectId, String sourceId, int offset) {
 		final var map = sortedDatumStreams(kind, objectId);
-		final List<Datum> list = map.computeIfAbsent(sourceId, k -> new ArrayList<>(2));
+		final List<Datum> list = map.computeIfAbsent(sourceId, _ -> new ArrayList<>(2));
 		return offset(kind, objectId, sourceId, list, offset);
 	}
 
 	@Override
-	public Collection<Datum> offsetMatching(ObjectDatumKind kind, Long objectId, String sourceIdPattern,
-			Instant timestamp, int offset) {
+	public Collection<Datum> offsetMatching(ObjectDatumKind kind, Long objectId,
+			@Nullable String sourceIdPattern, Instant timestamp, int offset) {
 		final var map = sortedDatumStreams(kind, objectId);
 		final var result = new ArrayList<Datum>(map.size());
 		for ( Entry<String, List<Datum>> e : map.entrySet() ) {
@@ -171,10 +201,10 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 	}
 
 	@Override
-	public Datum offset(ObjectDatumKind kind, Long objectId, String sourceId, Instant timestamp,
-			int offset) {
+	public @Nullable Datum offset(ObjectDatumKind kind, Long objectId, String sourceId,
+			Instant timestamp, int offset) {
 		final var map = sortedDatumStreams(kind, objectId);
-		final List<Datum> list = map.computeIfAbsent(sourceId, k -> new ArrayList<>(2));
+		final List<Datum> list = map.computeIfAbsent(sourceId, _ -> new ArrayList<>(2));
 		return offset(kind, objectId, sourceId, list, timestamp, offset);
 	}
 
@@ -191,11 +221,11 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 	 *        the list of available datum
 	 * @param offset
 	 *        the desired offset (will be higher than {@code list.size()})
-	 * @return the resolved datum, or {@literal null}
+	 * @return the resolved datum, or {@code null}
 	 * @since 2.0
 	 */
-	protected Datum offsetMiss(ObjectDatumKind kind, Long objectId, String sourceId, List<Datum> list,
-			int offset) {
+	protected @Nullable Datum offsetMiss(ObjectDatumKind kind, Long objectId, String sourceId,
+			List<Datum> list, int offset) {
 		return null;
 	}
 
@@ -217,16 +247,58 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 	 * @param referenceIndex
 	 *        the index within {@code list} for a datum found already for the
 	 *        given {@code timestamp}, or {@code -1} if not found
-	 * @return the resolved datum, or {@literal null}
+	 * @return the resolved datum, or {@code null}
 	 * @since 2.0
 	 */
-	protected Datum offsetMiss(ObjectDatumKind kind, Long objectId, String sourceId, List<Datum> list,
-			Instant timestamp, int offset, int referenceIndex) {
+	protected @Nullable Datum offsetMiss(ObjectDatumKind kind, Long objectId, String sourceId,
+			List<Datum> list, Instant timestamp, int offset, int referenceIndex) {
 		return null;
 	}
 
-	private Datum offset(ObjectDatumKind kind, Long objectId, String sourceId, List<Datum> list,
-			int offset) {
+	/**
+	 * Hook to handle an exact timestamp "miss", to resolve a datum.
+	 *
+	 * @param kind
+	 *        the datum stream kind
+	 * @param objectId
+	 *        the datum object ID
+	 * @param sourceId
+	 *        the datum source ID
+	 * @param list
+	 *        the list of available datum
+	 * @param timestamp
+	 *        the datum timestamp to offset from
+	 * @param referenceIndex
+	 *        the index within {@code list} the resolved datum should be
+	 *        inserted at
+	 * @return the resolved datum, or {@code null}
+	 * @since 2.1
+	 */
+	protected @Nullable Datum atMiss(ObjectDatumKind kind, Long objectId, String sourceId,
+			List<Datum> list, Instant timestamp, int referenceIndex) {
+		return null;
+	}
+
+	private @Nullable Datum at(ObjectDatumKind kind, Long objectId, String sourceId, List<Datum> list,
+			Instant timestamp) {
+		assert list != null;
+		if ( timestamp == null ) {
+			return null;
+		}
+		for ( int idx = 0, len = list.size(); idx < len; idx++ ) {
+			Datum d = list.get(idx);
+			int cmp = timestamp.compareTo(d.getTimestamp());
+			if ( cmp > 0 ) {
+				return atMiss(kind, objectId, sourceId, list, timestamp, idx);
+			} else if ( cmp == 0 ) {
+				return d;
+			}
+		}
+		return atMiss(kind, objectId, sourceId, list, timestamp, list.size());
+	}
+
+	private @Nullable Datum offset(ObjectDatumKind kind, Long objectId, String sourceId,
+			List<Datum> list, int offset) {
 		assert list != null;
 		if ( offset < 0 ) {
 			return null;
@@ -237,12 +309,12 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 		return offsetMiss(kind, objectId, sourceId, list, offset);
 	}
 
-	private Datum offset(ObjectDatumKind kind, Long objectId, String sourceId, List<Datum> list,
-			Instant timestamp, int offset) {
+	private @Nullable Datum offset(ObjectDatumKind kind, Long objectId, String sourceId,
+			List<Datum> list, Instant timestamp, int offset) {
 		assert list != null;
 		for ( int idx = 0, len = list.size(); idx < len; idx++ ) {
 			Datum d = list.get(idx);
-			if ( !d.getTimestamp().isAfter(timestamp) ) {
+			if ( !nonnull(d.getTimestamp(), "Timestamp").isAfter(timestamp) ) {
 				if ( offset == 0 ) {
 					return d;
 				}
@@ -254,6 +326,62 @@ public class BasicDatumStreamsAccessor implements DatumStreamsAccessor {
 			}
 		}
 		return offsetMiss(kind, objectId, sourceId, list, timestamp, offset, -1);
+	}
+
+	@Override
+	public final Collection<Datum> rangeMatching(ObjectDatumKind kind, Long objectId,
+			@Nullable String sourceIdPattern, Instant from, Instant to) {
+		final var map = sortedDatumStreams(kind, objectId);
+		return rangeMatching(kind, objectId, sourceIdPattern, from, to, map);
+	}
+
+	/**
+	 * Find datum matching a time range query.
+	 *
+	 * @param kind
+	 *        the datum kind
+	 * @param objectId
+	 *        the object ID to find the offset datum for
+	 * @param sourceIdPattern
+	 *        an optional Ant-style source ID pattern to filter by
+	 * @param from
+	 *        the minimum datum timestamp (inclusive)
+	 * @param to
+	 *        the maximum datum timestamp (exclusive)
+	 * @param datumBySourceId
+	 *        a mapping of source ID to cached datum; extending classes can
+	 *        update as needed, but the datum lists must be kept in order by
+	 *        timestamp, descending
+	 * @return the matching datum, never {@code null}
+	 */
+	protected Collection<Datum> rangeMatching(ObjectDatumKind kind, Long objectId,
+			@Nullable String sourceIdPattern, Instant from, Instant to,
+			Map<String, List<Datum>> datumBySourceId) {
+		final var result = new ArrayList<Datum>(8);
+		for ( Entry<String, List<Datum>> e : datumBySourceId.entrySet() ) {
+			if ( sourceIdPattern == null || sourceIdPattern.isEmpty()
+					|| pathMatcher.match(sourceIdPattern, e.getKey()) ) {
+				for ( Datum d : e.getValue() ) {
+					final Instant ts = d.getTimestamp();
+					if ( ts == null ) {
+						continue;
+					} else if ( from != null && ts.isBefore(from) ) {
+						continue;
+					} else if ( to != null && !ts.isBefore(to) ) {
+						continue;
+					}
+					result.add(d);
+				}
+			}
+		}
+		return result;
+	}
+
+	@Override
+	public Collection<ObjectDatumStreamMetadata> findStreams(ObjectDatumKind kind, String query,
+			@Nullable String sourceIdPattern, String @Nullable... tags) {
+		// not supported
+		return List.of();
 	}
 
 }
