@@ -36,7 +36,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import java.net.URI;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -55,14 +55,13 @@ import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskScheduler;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import net.solarnetwork.central.dao.SolarNodeOwnershipDao;
 import net.solarnetwork.central.datum.mqtt.SolarInputDatumObserver;
 import net.solarnetwork.central.datum.v2.dao.DatumStreamMetadataDao;
 import net.solarnetwork.central.datum.v2.dao.ObjectStreamCriteria;
 import net.solarnetwork.central.datum.v2.domain.ObjectDatum;
+import net.solarnetwork.central.datum.v2.support.DatumJsonUtils;
 import net.solarnetwork.central.support.ObservableMqttConnection;
-import net.solarnetwork.codec.JsonUtils;
 import net.solarnetwork.common.mqtt.MqttQos;
 import net.solarnetwork.common.mqtt.netty.NettyMqttConnectionFactory;
 import net.solarnetwork.domain.datum.BasicObjectDatumStreamMetadata;
@@ -71,6 +70,7 @@ import net.solarnetwork.domain.datum.GeneralDatum;
 import net.solarnetwork.domain.datum.ObjectDatumKind;
 import net.solarnetwork.test.mqtt.MqttServerSupport;
 import net.solarnetwork.util.StatTracker;
+import tools.jackson.databind.ObjectMapper;
 
 /**
  * Test cases for the {@link SolarInputDatumObserver} class.
@@ -99,16 +99,12 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 	private ObservableMqttConnection mqttConnection;
 	private SolarInputDatumObserver service;
 
-	private ObjectMapper createObjectMapper() {
-		return JsonUtils.newDatumObjectMapper();
-	}
-
 	@BeforeEach
 	public void setup() throws Exception {
 		setupMqttServer();
 
 		executor = Executors.newSingleThreadExecutor();
-		objectMapper = createObjectMapper();
+		objectMapper = DatumJsonUtils.DATUM_JSON_OBJECT_MAPPER;
 
 		ThreadPoolTaskScheduler scheduler = new ThreadPoolTaskScheduler();
 		scheduler.initialize();
@@ -121,7 +117,7 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 				datumStreamMetadataDao);
 
 		mqttConnection = new ObservableMqttConnection(factory, mqttStats, "Test SolarInput Datum Obs",
-				Collections.singletonList(service));
+				List.of(service));
 		mqttConnection.getMqttConfig().setReconnectDelaySeconds(1);
 		mqttConnection.getMqttConfig().setClientId(TEST_CLIENT_ID);
 		mqttConnection.getMqttConfig().setServerUri(new URI("mqtt://localhost:" + getMqttServerPort()));
@@ -245,7 +241,7 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 		service.registerNodeObserver(handler, nodeId);
 
 		given(nodeOwnershipDao.ownershipForNodeId(nodeId)).willReturn(owner);
-		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(i -> {
+		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(_ -> {
 			return singleton(new BasicObjectDatumStreamMetadata(streamId, "UTC", Node, nodeId, sourceId,
 					new String[] { "a" }, new String[] { "b" }, new String[] { "c" }));
 		});
@@ -299,7 +295,7 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 		final IMqttClient client = startConnectionAndClient();
 
 		given(nodeOwnershipDao.ownershipForNodeId(nodeId)).willReturn(owner);
-		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(i -> {
+		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(_ -> {
 			return singleton(new BasicObjectDatumStreamMetadata(streamId, "UTC", Node, nodeId, sourceId,
 					new String[] { "a" }, new String[] { "b" }, new String[] { "c" }));
 		});
@@ -355,7 +351,7 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 		final IMqttClient client = startConnectionAndClient();
 
 		given(nodeOwnershipDao.ownershipForNodeId(nodeId)).willReturn(owner);
-		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(i -> {
+		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(_ -> {
 			return singleton(new BasicObjectDatumStreamMetadata(streamId, "UTC", Node, nodeId, sourceId,
 					new String[] { "a" }, new String[] { "b" }, new String[] { "c" }));
 		});
@@ -422,7 +418,7 @@ public class SolarInputDatumObserverTests extends MqttServerSupport {
 		final IMqttClient client = startConnectionAndClient();
 
 		given(nodeOwnershipDao.ownershipForNodeId(nodeId)).willReturn(owner).willReturn(owner);
-		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(i -> {
+		given(datumStreamMetadataDao.findDatumStreamMetadata(any())).willAnswer(_ -> {
 			return singleton(new BasicObjectDatumStreamMetadata(streamId, "UTC", Node, nodeId, sourceId,
 					new String[] { "a" }, new String[] { "b" }, new String[] { "c" }));
 		});
