@@ -25,7 +25,6 @@ package net.solarnetwork.central.query.web.api;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
-import java.util.Collections;
 import java.util.HexFormat;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -37,6 +36,8 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import net.solarnetwork.central.security.AuthorizationException;
+import net.solarnetwork.central.security.AuthorizationException.Reason;
 import net.solarnetwork.central.security.SecurityToken;
 import net.solarnetwork.central.security.SecurityUtils;
 import net.solarnetwork.central.security.web.AuthenticationTokenService;
@@ -48,7 +49,7 @@ import net.solarnetwork.web.jakarta.security.AuthenticationScheme;
  * REST controller for authorization token API.
  * 
  * @author matt
- * @version 1.2
+ * @version 1.3
  */
 @RestController("v1AuthTokenController")
 @RequestMapping(value = "/api/v1/sec/auth-tokens")
@@ -84,13 +85,18 @@ public class AuthTokenController {
 	@ResponseBody
 	@RequestMapping(value = "/refresh/v2", method = RequestMethod.GET)
 	public Result<Map<String, ?>> refreshV2(@RequestParam("date") LocalDate signDate) {
-		SecurityToken actor = SecurityUtils.getCurrentToken();
+		final SecurityToken actor = SecurityUtils.getCurrentToken();
+		if ( actor.getPolicy() != null && actor.getPolicy().getRefreshAllowed() != null
+				&& !actor.getPolicy().getRefreshAllowed() ) {
+			throw new AuthorizationException(Reason.ACCESS_DENIED, actor.getToken());
+		}
+
 		Instant date = signDate.atStartOfDay(ZoneOffset.UTC).toInstant();
 		if ( date.isAfter(Instant.now()) ) {
 			throw new IllegalArgumentException("date parameter cannot be in the future");
 		}
 		byte[] key = tokenService.computeAuthenticationTokenSigningKey(AuthenticationScheme.V2, actor,
-				Collections.singletonMap(AuthenticationTokenService.SIGN_DATE_PROP, date));
+				Map.of(AuthenticationTokenService.SIGN_DATE_PROP, date));
 		Map<String, Object> data = new LinkedHashMap<>(3);
 		data.put("key", HexFormat.of().formatHex(key));
 		return Result.success(data);
