@@ -22,13 +22,13 @@
 
 package net.solarnetwork.central.reg.web.domain;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import net.solarnetwork.central.datum.domain.AuditDatumRecordCounts;
+import net.solarnetwork.central.datum.domain.ObjectRecordId;
 import net.solarnetwork.central.datum.v2.domain.AuditDatumRollup;
 
 /**
@@ -40,12 +40,12 @@ import net.solarnetwork.central.datum.v2.domain.AuditDatumRollup;
  */
 public class DatumInsightOverallStatistics {
 
-	private List<AuditDatumRecordCounts> counts = Collections.emptyList();
+	private List<AuditDatumRecordCounts> counts = List.of();
 	private Integer nodeCount;
 	private Integer sourceCount;
 	private Integer activeSourceCount;
 	private Integer activeNodeCount;
-	private List<AuditDatumRecordCounts> accumulative = Collections.emptyList();
+	private List<AuditDatumRecordCounts> accumulative = List.of();
 
 	/**
 	 * Default constructor.
@@ -83,7 +83,8 @@ public class DatumInsightOverallStatistics {
 
 	private static List<AuditDatumRecordCounts> convert(Iterable<AuditDatumRollup> rollups) {
 		return StreamSupport.stream(rollups.spliterator(), false).map(e -> {
-			AuditDatumRecordCounts c = new AuditDatumRecordCounts(e.getNodeId(), e.getSourceId(),
+			AuditDatumRecordCounts c = new AuditDatumRecordCounts(
+					new ObjectRecordId(e.getNodeId(), e.getSourceId(), e.getTimestamp()),
 					e.getDatumCount(), e.getDatumHourlyCount(), e.getDatumDailyCount(),
 					e.getDatumMonthlyCount());
 			if ( e.getDatumPropertyCount() != null ) {
@@ -92,9 +93,6 @@ public class DatumInsightOverallStatistics {
 								: 0));
 			}
 			c.setDatumQueryCount(e.getDatumQueryCount());
-			if ( e.getTimestamp() != null ) {
-				c.setCreated(e.getTimestamp());
-			}
 			return c;
 		}).collect(Collectors.toList());
 	}
@@ -206,7 +204,7 @@ public class DatumInsightOverallStatistics {
 
 	public void setCounts(List<AuditDatumRecordCounts> counts) {
 		if ( counts == null ) {
-			counts = Collections.emptyList();
+			counts = List.of();
 		}
 		this.counts = counts;
 	}
@@ -217,7 +215,7 @@ public class DatumInsightOverallStatistics {
 
 	public void setAccumulative(List<AuditDatumRecordCounts> accumulative) {
 		if ( accumulative == null ) {
-			accumulative = Collections.emptyList();
+			accumulative = List.of();
 		}
 		this.accumulative = accumulative;
 	}
