@@ -1,28 +1,30 @@
 /* ==================================================================
  * HtmlToPdfInvoiceTests.java - 8/08/2020 7:32:57 AM
- * 
+ *
  * Copyright 2020 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
 
 package net.solarnetwork.central.user.billing.snf.pdf.test;
 
-import static java.util.UUID.randomUUID;
+import static java.time.Instant.now;
+import static net.solarnetwork.central.test.CommonTestUtils.randomLong;
+import static net.solarnetwork.central.test.CommonTestUtils.randomString;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.greaterThan;
 import java.io.BufferedOutputStream;
@@ -34,15 +36,15 @@ import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
+import java.time.LocalDate;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.FileCopyUtils;
@@ -64,7 +66,7 @@ import net.solarnetwork.service.TemplateRenderer;
 
 /**
  * Test to render a PDF from HTML.
- * 
+ *
  * @author matt
  * @version 2.0
  */
@@ -73,16 +75,12 @@ public class HtmlToPdfInvoiceTests {
 	private final Logger log = LoggerFactory.getLogger(getClass());
 
 	private static Address createAddress(String country, String timeZoneId) {
-		final Address addr = new Address(randomUUID().getMostSignificantBits(), Instant.now());
-		addr.setCountry(country);
-		addr.setTimeZoneId(timeZoneId);
+		Address addr = new Address(randomLong(), randomString(), randomString(), country, timeZoneId);
 		return addr;
 	}
 
 	private static Account createAccount(Long userId, String locale, Address address) {
-		final Account account = new Account(randomUUID().getMostSignificantBits(), userId,
-				Instant.now());
-		account.setLocale(locale);
+		final Account account = new Account(randomLong(), userId, now(), "NZD", locale);
 		account.setAddress(address);
 		return account;
 	}
@@ -96,10 +94,10 @@ public class HtmlToPdfInvoiceTests {
 	@Test
 	public void render_example() throws IOException {
 		// GIVEN
-		final Account account = createAccount(randomUUID().getMostSignificantBits(), "en_NZ",
+		final Account account = createAccount(randomLong(), "en_NZ",
 				createAddress("NZ", "Pacific/Auckland"));
-		final SnfInvoice snfInvoice = new SnfInvoice(randomUUID().getMostSignificantBits(),
-				account.getUserId(), account.getId().getId(), Instant.now());
+		final SnfInvoice snfInvoice = new SnfInvoice(randomLong(), account.getUserId(),
+				account.getId().getId(), Instant.now(), LocalDate.now(), LocalDate.now(), "NZD");
 		final SnfInvoiceItem item1 = SnfInvoiceItem.newItem(snfInvoice, InvoiceItemType.Usage,
 				NodeUsage.DATUM_PROPS_IN_KEY, new BigDecimal("123456789"), new BigDecimal("12345.67"));
 		final SnfInvoiceItem tax1 = SnfInvoiceItem.newItem(snfInvoice, InvoiceItemType.Tax, "GST",
@@ -142,8 +140,7 @@ public class HtmlToPdfInvoiceTests {
 		Path tmpFile = Files.createTempFile("HtmlToPdfInvoiceTests-SVG-", ".pdf");
 		try (BufferedOutputStream out = new BufferedOutputStream(
 				new FileOutputStream(tmpFile.toFile()))) {
-			t.render(Locale.ENGLISH, HtmlToPdfTemplateRenderer.PDF_MIME_TYPE, Collections.emptyMap(),
-					out);
+			t.render(Locale.ENGLISH, HtmlToPdfTemplateRenderer.PDF_MIME_TYPE, Map.of(), out);
 		}
 
 		// THEN
@@ -158,11 +155,6 @@ public class HtmlToPdfInvoiceTests {
 		return new TemplateRenderer() {
 
 			@Override
-			public int compareTo(String o) {
-				return 0;
-			}
-
-			@Override
 			public String getId() {
 				return "test";
 			}
@@ -174,7 +166,7 @@ public class HtmlToPdfInvoiceTests {
 
 			@Override
 			public List<MimeType> supportedMimeTypes() {
-				return Collections.singletonList(MimeTypeUtils.TEXT_HTML);
+				return List.of(MimeTypeUtils.TEXT_HTML);
 			}
 
 			@Override
@@ -195,8 +187,7 @@ public class HtmlToPdfInvoiceTests {
 		Path tmpFile = Files.createTempFile("HtmlToPdfInvoiceTests-SVG-", ".pdf");
 		try (BufferedOutputStream out = new BufferedOutputStream(
 				new FileOutputStream(tmpFile.toFile()))) {
-			t.render(Locale.ENGLISH, HtmlToPdfTemplateRenderer.PDF_MIME_TYPE, Collections.emptyMap(),
-					out);
+			t.render(Locale.ENGLISH, HtmlToPdfTemplateRenderer.PDF_MIME_TYPE, Map.of(), out);
 		}
 
 		// THEN
